# python-opc-lite

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml  python-version  requirements.txt  setup.cfg  tox.ini  z.pptx
.github/workflows/: codeql.yml  python-app.yml  ruff.yml  tox.yml
docs/: conf.py  contribution.rst  index.rst  quickstart.rst  releasenotes.rst  requirements.txt
docs/include/: links.rst
docs/source/: modules.rst  opc.base.rst  opc.coreprops.rst  opc.datetime.rst  opc.package.rst  opc.parser.rst  opc.part.rst  opc.rels.rst  opc.relspart.rst  opc.types.rst  opc.uri.rst
opc/: base.py  coreprops.py  datetime.py  package.py  parser.py  part.py  rels.py  relspart.py  types.py  uri.py
src/opc/: __init__.py  base.py  coreprops.py  datetime.py  package.py  parser.py  part.py  rels.py  relspart.py  types.py  uri.py
tests/: conftest.py  test_base.py  test_coreprops.py  test_datetime.py  test_package.py  test_parser.py  test_part.py  test_rels.py  test_relspart.py  test_types.py  test_uri.py
tests/data/: blank.pptx  package_write.pptx
z/blank/docProps/: app.xml  core.xml
z/blank/ppt/: viewProps.xml
z/blank/ppt/slideLayouts/: slideLayout1.xml  slideLayout10.xml  slideLayout11.xml  slideLayout2.xml  slideLayout3.xml  slideLayout4.xml  slideLayout5.xml  slideLayout6.xml  slideLayout7.xml  slideLayout8.xml  slideLayout9.xml
z/blank/ppt/slideMasters/: slideMaster1.xml
z/blank/ppt/slides/: slide1.xml
