[project]
name = "python-opc-lite"
version = "0.0.2"
description = ""
authors = [ 
  {name = "Michael Holschbach", email = "mholschbach@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "lxml (>=5.3.2,<6.0.0)",
  "lxml-util (>=1.0.2,<2.0.0)",
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
mypy = "^1.18.2"
ruff = "^0.13.2"
tox = "^4.30.2"
types-lxml = "^2025.8.25"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
#requires = ["poetry-core>=2.0.0,<3.0.0"]
#build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [ "lxmlutil.etree" ]
follow_untyped_imports = true
